--- a/.github/workflows/Minesweeper.yml
+++ b/.github/workflows/Minesweeper.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet restore
       
     - name: Build
-      run: dotnet build "Games\Minesweeper\Minesweeper.csproj" --no-restore
+      run: dotnet build "Games/Minesweeper/Minesweeper.csproj" --no-restore
       
     - name: Test
-      run: dotnet test "Tests\Minesweeper\Minesweeper.Tests.csproj" --no-build --verbosity normal
+      run: dotnet test "Tests/Minesweeper/Minesweeper.Tests.csproj" --no-build --verbosity normal
